--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "very-simple-calendar",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Should be a very simple react based calendar to show occupied states",
-  "main": "index.tsx",
+  "main": "dist/index.js",
+  "types": "dist/src/Calendar.d.ts",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "start": "npm i && npm audit fix",
     "build": "webpack --config webpack.prod.js",
@@ -10,6 +14,11 @@
   },
   "author": "Toni Roos",
   "license": "MIT",
+  "homepage": "https://github.com/ToniRoos/very-simple-calendar#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ToniRoos/very-simple-calendar.git"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
@@ -25,19 +34,19 @@
     "browser-sync": "^2.26.14",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "filter-json-loader": "^0.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "http-proxy-middleware": "^0.19.1",
     "jest": "^25.1.0",
     "jest-html": "^1.5.0",
     "jest-jenkins-reporter": "^1.0.2",
     "jest-serializer-html": "^7.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^2.1.0",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "pretty": "^2.0.0",
@@ -46,16 +55,12 @@
     "ts-jest": "^26.5.4",
     "ts-loader": "^6.0.4",
     "typescript": "^3.9.9",
-    "webpack": "^4.46.0",
+    "webpack": "^5.44.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.1"
-  },
-  "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
   },
   "jest": {
     "verbose": true,
@@ -77,5 +82,9 @@
     "reportPath": "reports",
     "reportFile": "report.xml",
     "indent": 4
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
