--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,29 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "outDir": "dist",
+        "module": "esnext",
+        "target": "es5",
+        "lib": [
+            "es6",
+            "dom",
+            "es2016",
+            "es2017"
+        ],
         "sourceMap": true,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "ES2016",
+        "allowJs": false,
         "jsx": "react",
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-    }
+        "declaration": true,
+        "moduleResolution": "node",
+        "forceConsistentCasingInFileNames": true,
+        "allowSyntheticDefaultImports": true
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "example",
+        "rollup.config.js"
+    ]
 }
